--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,10 @@
     "@ant-design/nextjs-registry": "^1.0.0",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.1",
-    "axios": "^1.7.2",
+    "axios": "1.8.2",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
-    "next": "^14.2.3",
+    "next": "15.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
