added compliance status seeder

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ DB_NAME=mydatabase
 PGADMIN_EMAIL=admin@example.com
 PGADMIN_PASSWORD=admin
 
-BACKEND_URL=http://68.183.158.185:8080/api
+BACKEND_URL=http://68.183.158.185:8080/api/:path*
