--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@ant-design/nextjs-registry": "^1.0.0",
+    "@mui/material": "^7.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.21.1",
     "axios": "1.8.2",
