--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     image: postgres:latest
     container_name: postgres
     environment:
-      POSTGRES_USER: ${DB_USER:-myuser}
-      POSTGRES_PASSWORD: ${DB_PASSWORD:-mypassword}
-      POSTGRES_DB: ${DB_NAME:-mydatabase}
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: mypassword
+      POSTGRES_DB: mydatabase
     volumes:
       - postgres-data:/var/lib/postgresql/data
     ports:
@@ -20,8 +20,8 @@ services:
     image: dpage/pgadmin4:latest
     container_name: pgadmin
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL:-admin@example.com}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD:-admin}
+      PGADMIN_DEFAULT_EMAIL: admin@example.com
+      PGADMIN_DEFAULT_PASSWORD: admin
     volumes:
       - pgadmin-data:/var/lib/pgadmin
     ports:
@@ -37,9 +37,9 @@ services:
     ports:
       - "8080:8080"
     environment:
-      QUARKUS_DATASOURCE_USERNAME: ${DB_USER:-myuser}
-      QUARKUS_DATASOURCE_PASSWORD: ${DB_PASSWORD:-mypassword}
-      QUARKUS_DATASOURCE_JDBC_URL: jdbc:postgresql://postgres:5432/${DB_NAME:-mydatabase}
+      QUARKUS_DATASOURCE_USERNAME: myuser
+      QUARKUS_DATASOURCE_PASSWORD: mypassword
+      QUARKUS_DATASOURCE_JDBC_URL: jdbc:postgresql://postgres:5432/mydatabase
     depends_on:
       - postgres
     networks:
@@ -53,7 +53,7 @@ services:
     ports:
       - "3000:3000"
     environment:
-      BACKEND_URL: ${BACKEND_URL:-http://localhost:8080/api}
+      BACKEND_URL: http://localhost:8080/api
     networks:
       - risknetwork
     restart: always
