--- a/backend/src/main/resources/application.yaml
+++ b/backend/src/main/resources/application.yaml
@@ -26,7 +26,7 @@ quarkus:
     username: postgres
     password: mdsoln
     jdbc:
-      url: jdbc:postgresql://localhost:5432/mydatabase
+      url: jdbc:postgresql://postgres:5432/mydatabase
     # Connection pool settings
     jdbc-pool:
       min-size: 5
